--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>mChem</title>
+    <title>mChemo</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -80,10 +80,10 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li class="active">
-                        <a href="javascript:;" data-toggle="collapse" data-target="#single"><i class="fa fa-fw fa-list" aria-hidden="true"></i> Cancer Type <i class="fa fa-fw fa-caret-down"></i></a>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#single"><i class="fa fa-fw fa-list" aria-hidden="true"></i> Cancer Type <i class="fa fa-fw fa-caret-down pull-right"></i></a>
                         <ul id="single" class="collapse">
                             <li>
-                                <a href="javascript:;" data-toggle="collapse" data-target="#singleCancer">Single Cancer Analysis<i class="fa fa-fw fa-caret-down"></i></a>
+                                <a href="javascript:;" data-toggle="collapse" data-target="#singleCancer"><i class="fa fa-fw fa-plus-square"></i>  Single Cancer Analysis </a>
                                 <ul id="singleCancer" class="collapse">
                                     <li>
                                         <a href="#">Breast Cancer</a>
@@ -92,7 +92,7 @@
                                         <a href="#">Cervical Cancer</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:;" data-toggle="collapse" data-target="#colorectalCancer">Colorectal Cancer<i class="fa fa-fw fa-caret-down"></i></a>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#colorectalCancer"><i class="fa fa-fw fa-plus-square"></i>  Colorectal Cancer </a>
                                         <ul id="colorectalCancer" class="collapse">
                                             <li>
                                                 <a href="#">Colon Adenocarcinoma</a>
@@ -104,7 +104,7 @@
 
                                     </li>
                                     <li>
-                                        <a href="javascript:;" data-toggle="collapse" data-target="#kidneyCancer">Kidney Cancer<i class="fa fa-fw fa-caret-down"></i></a>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#kidneyCancer"><i class="fa fa-fw fa-plus-square"></i>  Kidney Cancer</a>
                                         <ul id="kidneyCancer" class="collapse">
                                             <li>
                                                 <a href="#">Kidney Chromophobe</a>
@@ -119,7 +119,7 @@
 
                                     </li>
                                     <li>
-                                        <a href="javascript:;" data-toggle="collapse" data-target="#lungCancer">Lung Cancer<i class="fa fa-fw fa-caret-down"></i></a>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#lungCancer"><i class="fa fa-fw fa-plus-square"></i>  Lung Cancer </a>
                                         <ul id="lungCancer" class="collapse">
                                             <li>
                                                 <a href="#">Lung Adenocarcinoma</a>
@@ -139,22 +139,22 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="javascript:;" data-toggle="collapse" data-target="#multipleCancer">Multiple Cancer Analysis<i class="fa fa-fw fa-caret-down"></i></a>
+                                <a href="javascript:;" data-toggle="collapse" data-target="#multipleCancer"><i class="fa fa-fw fa-plus-square"></i>  Multiple Cancer Analysis </a>
 
                             </li>
                         </ul>
                     </li>
                     <li>
 
-                        <a href="javascript:;" data-toggle="collapse" data-target="#treatment"><i class="fa fa-fw fa-medkit"></i> Treatment Type<i class="fa fa-fw fa-caret-down"></i></a>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#treatment"><i class="fa fa-fw fa-medkit"></i> Treatment Type<i class="fa fa-fw fa-caret-down pull-right"></i></a>
 
                         <ul id="treatment" class="collapse">
                             <li>
-                                <a href="javascript:;" data-toggle="collapse" data-target="#singleChemo">Chemo Agents<i class="fa fa-fw fa-caret-down"></i></a>
+                                <a href="javascript:;" data-toggle="collapse" data-target="#singleChemo"><i class="fa fa-fw fa-plus-square"></i>  Chemo Agents </a>
                                 <ul id="singleChemo" class="collapse">
 
                                     <li>
-                                        <a href="javascript:;" data-toggle="collapse" data-target="#singleChemoAgents">Single Treatment<i class="fa fa-fw fa-caret-down"></i></a>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#singleChemoAgents"><i class="fa fa-fw fa-plus-square"></i>  Single Treatment </a>
                                         <ul id="singleChemoAgents" class="collapse">
                                             <li>
                                                 <a href="#">Alkylating Agents</a>
@@ -193,11 +193,11 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="javascript:;" data-toggle="collapse" data-target="#nonChemo">Non-Chemo Agents<i class="fa fa-fw fa-caret-down"></i></a>
+                                <a href="javascript:;" data-toggle="collapse" data-target="#nonChemo"><i class="fa fa-fw fa-plus-square"></i>  Non-Chemo Agents</a>
                                 <ul id="nonChemo" class="collapse">
 
                                     <li>
-                                        <a href="javascript:;" data-toggle="collapse" data-target="#nonChemoSingle">Single Treatment<i class="fa fa-fw fa-caret-down"></i></a>
+                                        <a href="javascript:;" data-toggle="collapse" data-target="#nonChemoSingle"><i class="fa fa-fw fa-plus-square"></i>  Single Treatment </a>
                                         <ul id="nonChemoSingle" class="collapse">
                                             <li>
                                                 <a href="#">Biphosphonate Derivative</a>
@@ -260,7 +260,7 @@
 
                 <!-- Page Heading -->
                 <div class="row">
-                    <div class="col-lg-12 ">
+                    <div class="col-sm-12 ">
                         <ol class="breadcrumb breadcrumb-arrow">
                             <li><a href="#">Genomic/Epigenomic Analysis</a></li>
                             <li><a href="#">Molecular Pathway</a></li>
@@ -272,8 +272,8 @@
                 <!-- /.row -->
 
                 <div class="row">
-                    <div class="col-lg-offset-2 col-lg-8">
-                        <div class="well well-lg">
+                    <div class="col-sm-offset-2 col-sm-8">
+                        <div class="well well-sm">
 
                         </div>
 
