--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
                                     </li>
                                     <li>
-                                        <a href="#">Multiple Treatment</a>
+                                        <a href="#"><i class="fa fa-fw fa-plus-square"></i>  Multiple Treatment</a>
                                     </li>
 
                                 </ul>
