pluralised treatment section

--- a/index.html
+++ b/index.html
@@ -158,31 +158,31 @@
                                         <a href="javascript:;" data-toggle="collapse" data-target="#singleChemoAgents"><i class="fa fa-fw fa-plus-square thirdLevel"></i>  Single Treatment </a>
                                         <ul id="singleChemoAgents" class="collapse">
                                             <li>
-                                                <a href="#">Alkylating Agents</a>
+                                                <a href="#">Alkylating Agent</a>
                                             </li>
                                             <li>
-                                                <a href="#">Angiogenesis inhibitors</a>
+                                                <a href="#">Angiogenesis Inhibitor</a>
                                             </li>
                                             <li>
-                                                <a href="#">Antimetabolites</a>
+                                                <a href="#">Antimetabolite</a>
                                             </li>
                                             <li>
-                                                <a href="#">Antineoplastic Agents</a>
+                                                <a href="#">Antineoplastic Agent</a>
                                             </li>
                                             <li>
-                                                <a href="#">Aromatase Inhibitors</a>
+                                                <a href="#">Aromatase Inhibitor</a>
                                             </li>
                                             <li>
-                                                <a href="#">Heparanase Inhibitors</a>
+                                                <a href="#">Heparanase Inhibitor</a>
                                             </li>
                                             <li>
-                                                <a href="#">Kinase Inhibitors</a>
+                                                <a href="#">Kinase Inhibitor</a>
                                             </li>
                                             <li>
-                                                <a href="#">Plant Alkanoids</a>
+                                                <a href="#">Plant Alkanoid</a>
                                             </li>
                                             <li>
-                                                <a href="#">Topoisomerase Inhibitors</a>
+                                                <a href="#">Topoisomerase Inhibitor</a>
                                             </li>
                                         </ul>
 
@@ -205,13 +205,13 @@
                                                 <a href="#">Biphosphonate Derivative</a>
                                             </li>
                                             <li>
-                                                <a href="#">Cytokine Agents</a>
+                                                <a href="#">Cytokine Agent</a>
                                             </li>
                                             <li>
-                                                <a href="#">Folic Acid Antagonists</a>
+                                                <a href="#">Folic Acid Antagonist</a>
                                             </li>
                                             <li>
-                                                <a href="#">Virus Theraphy</a>
+                                                <a href="#">Virus Therapy</a>
                                             </li>
                                         </ul>
 
